--- a/to-do-list/package.json
+++ b/to-do-list/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "lodash": "^4.17.5",
     "react": "^16.2.0",
+    "react-dnd": "^2.6.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1"
   },
